Adicionando imagem a esquerda, alterando largura childs

--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
 <body>
   <div class="container">
     <div class="child" id="imagem-lateral"></div>
-    <div cladss="child" id="texto-faq">
+    <div class="child" id="texto-faq">
       <h1>FAQ</h1>
       <div class="perguntas-tudo">
         <div class="pergunta-resposta">
-          <h2 class="pergunta">How many team members can I invite?</h2>
-          <p class="resposta">You can invite up to 2 additional users on the Free plan. There is no limit on 
+          <h2>How many team members can I invite?</h2>
+          <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
           team members for the Premium plan.</p>
         </div>
         <div class="pergunta-resposta">
-          <h2 class="pergunta">What is the maximum file upload size?</h2>
-          <p class="resposta">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+          <h2>What is the maximum file upload size?</h2>
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
         </div>
         <div class="pergunta-resposta">
-          <h2 class="pergunta">How do I reset my password?</h2>
-          <p class="resposta">Click “Forgot password” from the login page or “Change password” from your profile page.
+          <h2>How do I reset my password?</h2>
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
           A reset link will be emailed to you.</p>
         </div>  
         <div class="pergunta-resposta">
-          <h2 class="pergunta">Can I cancel my subscription?</h2>
-          <p class="resposta">Yes! Send us a message and we’ll process your request no questions asked.</p>
+          <h2>Can I cancel my subscription?</h2>
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
         </div>
         <div class="pergunta-resposta">
-          <h2 class="pergunta">Do you provide additional support?</h2>
-          <p class="resposta">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          <h2>Do you provide additional support?</h2>
+          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
         </div>
       </div>
     </div>  
