--- a/index.html
+++ b/index.html
@@ -17,32 +17,40 @@
 </head>
 <body>
   <div class="container">
-    <div class="child" id="imagem-lateral"></div>
+    <div class="child" id="imagem-lateral">
+      <div id="box">
+      </div>
+    </div>
     <div class="child" id="texto-faq">
       <h1>FAQ</h1>
       <div class="perguntas-tudo">
         <div class="pergunta-resposta">
-          <h2>How many team members can I invite?</h2>
-          <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+          <p class="pergunta">How many team members can I invite?</p>
+          <p class="resposta">You can invite up to 2 additional users on the Free plan. There is no limit on 
           team members for the Premium plan.</p>
         </div>
+        <hr>
         <div class="pergunta-resposta">
-          <h2>What is the maximum file upload size?</h2>
-          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+          <p class="pergunta">What is the maximum file upload size?</p>
+          <p class="resposta">No more than 2GB. All files in your account must fit your allotted storage space.</p>
         </div>
+        <hr>
         <div class="pergunta-resposta">
-          <h2>How do I reset my password?</h2>
-          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+          <p class="pergunta">How do I reset my password?</p>
+          <p class="resposta">Click “Forgot password” from the login page or “Change password” from your profile page.
           A reset link will be emailed to you.</p>
-        </div>  
+        </div> 
+        <hr> 
         <div class="pergunta-resposta">
-          <h2>Can I cancel my subscription?</h2>
-          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+          <p class="pergunta">Can I cancel my subscription?</p>
+          <p class="resposta">Yes! Send us a message and we’ll process your request no questions asked.</p>
         </div>
+        <hr>
         <div class="pergunta-resposta">
-          <h2>Do you provide additional support?</h2>
-          <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          <p class="pergunta">Do you provide additional support?</p>
+          <p class="resposta">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
         </div>
+        <hr>
       </div>
     </div>  
   </div>
