--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -61,6 +61,6 @@
       </p>
     </footer>
   </div>
-  <script type="text/javascript" src="/main.js"></script>
+  <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
