alterando estrutura, melhorando CSS

--- a/index.html
+++ b/index.html
@@ -16,47 +16,49 @@
 
 </head>
 <body>
-  <div class="container">
-    <div class="child" id="imagem-lateral">
-      <div id="box">
-      </div>
-    </div>
-    <div class="child" id="texto-faq">
-      <h1>FAQ</h1>
+    <div class="container">
+        <div id="imagem-mulher-mobile"></div>
 
-      <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-      <div class="resposta">
-        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
-        team members for the Premium plan.</p>
-      </div>
-      <hr>
+        <div id="imagem-box-desktop"></div>
 
-      <button type="button" class="pergunta">What is the maximum file upload size?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-      <div class="resposta">
-          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
-      </div>  
-      <hr>
+        <div id="caixa-branca">
+            <div id="imagem-mulher-desktop" class="child"></div>
+            <div id="texto-faq" class="child">
+                <h1>FAQ</h1>
 
-      <button type="button" class="pergunta">How do I reset my password?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-      <div class="resposta">
-          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.</p>
-      </div>   
-      <hr> 
+                <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                <div class="resposta">
+                    <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+                    team members for the Premium plan.</p>
+                </div>
+                <hr>
 
-      <button type="button" class="pergunta">Can I cancel my subscription?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-      <div class="resposta">
-        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-      </div>
-      <hr>
+                <button type="button" class="pergunta">What is the maximum file upload size?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                <div class="resposta">
+                    <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                </div>  
+                <hr>
 
-      <button type="button" class="pergunta">Do you provide additional support?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-      <div class="resposta">  
-        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-      </div>
-      <hr>
+                <button type="button" class="pergunta">How do I reset my password?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                <div class="resposta">
+                    <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                    A reset link will be emailed to you.</p>
+                </div>   
+                <hr> 
 
-    </div>  
+                <button type="button" class="pergunta">Can I cancel my subscription?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                <div class="resposta">
+                    <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+                </div>
+                <hr>
+
+                <button type="button" class="pergunta">Do you provide additional support?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                <div class="resposta">  
+                    <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                </div>
+                <hr>
+            </div>
+        </div>  
   </div>
   <div class="rodape">
     <footer id="conteudo-rodape">
