Melhorando espaçamento do texto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="caixa-branca">
             <div id="imagem-mulher-desktop" class="child"></div>
             <div id="texto-faq" class="child">
-                <h1>FAQ</h1>
+                <h1><strong>FAQ</strong></h1>
 
                 <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                 <div class="resposta">
