--- a/index.html
+++ b/index.html
@@ -26,37 +26,49 @@
             <div id="texto-faq" class="child">
                 <h1><strong>FAQ</strong></h1>
 
-                <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-                <div class="resposta">
-                    <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
-                    team members for the Premium plan.</p>
-                </div>
-                <hr>
+                <div id="perguntas-respostas">
+                  <div class="dupla-pr">
+                    <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <div class="resposta">
+                        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+                        team members for the Premium plan.</p>
+                    </div>
+                    <hr>
+                  </div>
 
-                <button type="button" class="pergunta">What is the maximum file upload size?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-                <div class="resposta">
-                    <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                  <div class="dupla-pr">
+                    <button type="button" class="pergunta">What is the maximum file upload size?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <div class="resposta">
+                        <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                    </div>  
+                    <hr>
+                  </div>
+                  
+                  <div class="dupla-pr">
+                    <button type="button" class="pergunta">How do I reset my password?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <div class="resposta">
+                        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+                        A reset link will be emailed to you.</p>
+                    </div>   
+                    <hr> 
+                  </div>
+
+                  <div class="dupla-pr">
+                    <button type="button" class="pergunta">Can I cancel my subscription?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <div class="resposta">
+                        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="dupla-pr">
+                    <button type="button" class="pergunta">Do you provide additional support?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <div class="resposta">  
+                        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                    </div>
+                    <hr>
+                  </div>
                 </div>  
-                <hr>
-
-                <button type="button" class="pergunta">How do I reset my password?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-                <div class="resposta">
-                    <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-                    A reset link will be emailed to you.</p>
-                </div>   
-                <hr> 
-
-                <button type="button" class="pergunta">Can I cancel my subscription?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-                <div class="resposta">
-                    <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-                </div>
-                <hr>
-
-                <button type="button" class="pergunta">Do you provide additional support?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
-                <div class="resposta">  
-                    <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
-                </div>
-                <hr>
             </div>
         </div>  
   </div>
