--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>FAQ Accordion Card</title>
+  <title>Dúvidas Frequentes</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -17,54 +17,53 @@
 </head>
 <body>
     <div class="container">
-        <div id="imagem-mulher-mobile"></div>
+        <div id="imagem-mulher-mobile" aria-label="Ilustração de uma mulher olhando para uma tela"></div>
 
-        <div id="imagem-box-desktop"></div>
+        <div id="imagem-box-desktop" aria-label="Ilustração de uma caixa com um arroba"></div>
 
         <div id="caixa-branca">
-            <div id="imagem-mulher-desktop" class="child"></div>
+            <div id="imagem-mulher-desktop" class="child" aria-label="Ilustração de uma mulher olhando para uma tela"></div>
             <div id="texto-faq" class="child">
-                <h1><strong>FAQ</strong></h1>
+                <h1><strong>Dúvidas Frequentes</strong></h1>
 
                 <div id="perguntas-respostas">
                   <div class="dupla-pr">
-                    <button type="button" class="pergunta">How many team members can I invite?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <button type="button" class="pergunta">Quantos membros do time posso convidar?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                     <div class="resposta">
-                        <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
-                        team members for the Premium plan.</p>
+                        <p>Você pode convidar 2 usuários adicionais no plano Free. Não existe limite no plano Premium.</p>
                     </div>
                     <hr>
                   </div>
 
                   <div class="dupla-pr">
-                    <button type="button" class="pergunta">What is the maximum file upload size?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <button type="button" class="pergunta">Qual o tamanho máximo de upload de arquivos?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                     <div class="resposta">
-                        <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+                        <p>Não mais que 2GB. Todos os aquivos na sua conta devem caber no seu espaço máximo de armazenamento.</p>
                     </div>  
                     <hr>
                   </div>
                   
                   <div class="dupla-pr">
-                    <button type="button" class="pergunta">How do I reset my password?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <button type="button" class="pergunta">Como redefino minha senha?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                     <div class="resposta">
-                        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-                        A reset link will be emailed to you.</p>
+                        <p>Clique em “Esqueci minha senha” na página de login ou em “Mudar senha” no seu perfil.
+                        Um link para redefinir sua senha será enviado para o seu email.</p>
                     </div>   
                     <hr> 
                   </div>
 
                   <div class="dupla-pr">
-                    <button type="button" class="pergunta">Can I cancel my subscription?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <button type="button" class="pergunta">Como cancelo minha inscrição?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                     <div class="resposta">
-                        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+                        <p>Sim! Nos envie uma mensagem e nos vamo proceder com a sua solicitação sem questionar.</p>
                     </div>
                     <hr>
                   </div>
 
                   <div class="dupla-pr">
-                    <button type="button" class="pergunta">Do you provide additional support?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
+                    <button type="button" class="pergunta">Vocês oferecem suporte adicional?<img src="./images/icon-arrow-down.svg" alt="ícone flecha para baixo/para cima"></button>
                     <div class="resposta">  
-                        <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+                        <p>Suporte por chat e email estão disponível 24/7. Atendimento por telefone durante o horário comercial. .</p>
                     </div>
                     <hr>
                   </div>
